assets/scss/termo-plan.scss
.thermo-plan--vertical {
	height: 360px;
	max-width: 250px;
	margin: 0 auto;


	.thermo-plan--chart {
		margin-left: 50px;
		margin-right: 50px;
		height: 100%;
		position: relative;
	}

	.thermo-plan--period {
		display: flex;
		align-items: center;
		justify-content: center;
		text-align: center;
		line-height: 18px;
		padding: 3px;
		overflow: hidden;
		box-sizing: border-box;
		border: 3px solid;
		border-top-width: 0;

		i {
			font-size: 3rem;
		}

		&:first-child {
			border-top-width: 3px;
		}
	}

	.thermo-plan--labels {
		position: relative;
		width: 40px;
		height: 100%;
		margin-top: 5px;
		margin-left: 10px;
		float: right;
		font-size: 1.2rem;
	}

	.thermo-plan--label {
		position: absolute;
		left: 0;
		margin-top: -14px;
		color: $black;
	}

	.thermo-plan--current-time {
		position: relative;
		width: 40px;
		margin-right: 10px;
		text-align: right;
		margin-top: -14px;
		font-weight: bold;
	}

	.thermo-plan--pointer {
		position: absolute;
		left: -50px;
		width: 50px;
		height: 2px;
		margin-top: -1px;
		text-align: right;
	}
}

.thermo-plan--horizontal {
	padding: 0 20px;

	.thermo-plan--chart {
		height: 50px;
		position: relative;
	}

	.thermo-plan--period {
		float: left;
		text-align: center;
		line-height: 18px;
		box-sizing: border-box;
		border: 1px solid;
		border-left-width: 0;
		height: 0;
		position: relative;

		i {
			position: relative;
			top: 5px;
			font-size: 3rem;
		}

		&:before {
			content: '';
			position: absolute;
			top: -5px;
			left: -5px;
			width: 10px;
			height: 10px;
			background: $white;
			border-radius: 5px;
			border: 2px solid $dark-gray;
		}

		&.last-child:after {
			content: '';
			position: absolute;
			top: -5px;
			right: -5px;
			width: 10px;
			height: 10px;
			background: $white;
			border-radius: 5px;
			border: 2px solid $dark-gray;
		}
	}

	.thermo-plan--labels {
		position: relative;
		height: 20px;
		width: 100%;
		font-size: 1.2rem;
	}

	.thermo-plan--label {
		position: absolute;
		top: 0;
		margin-left: -17px;
		color: $black;
		transform: rotate(-45deg);
	}

	.thermo-plan--label--first {
		margin-left: 0;
	}

	.thermo-plan--label--last {
		margin-left: 0;
		right: 0;
	}

	.thermo-plan--current-time {
		position: relative;
		margin-left: 5px;
		font-weight: bold;

		&.thermo-plan--last-part {
			margin-left: -50px;
		}
	}

	.thermo-plan--pointer {
		position: absolute;
		top: -25px;
		height: 25px;
		width: 2px;
		margin-left: -1px;
	}
}

